<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>calibration_manager</name>
  <version>0.1.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jchaley42@gmail.com">J-C-Haley</maintainer>
  <license>BSD</license>

  <depend>rclpy</depend>
  <depend>ros2launch</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>python3-pandas</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-xmltodict</exec_depend>
  <exec_depend>xterm</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_python</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
